--- a/WebPages/careers.html
+++ b/WebPages/careers.html
@@ -20,7 +20,7 @@
         <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><span>careers</span></li>
+            <li><span>Careers</span></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="contact_us.html">Contact us</a></li>
 
